--- a/src/Detail.scss
+++ b/src/Detail.scss
@@ -16,3 +16,11 @@
 .my-alert p {
     margin-bottom: 0;
 }
+
+.wow-enter{
+    opacity:0;
+}
+.wow-enter-active{
+    opacity:1;
+    transition : all 500ms;
+}
